--- a/css/style.css
+++ b/css/style.css
@@ -537,13 +537,13 @@ th {
 }
 
 .frame {
-    margin-left: 2rem;
-    width: 95%;
-    height: 95%;
+    margin: 2rem 2rem;
+    width: 100%;
+    height: 100%;
 }
 
 /*media queries for web responsive*/
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 820px) {
     * {
         margin: 0;
     }
@@ -664,10 +664,11 @@ th {
         height: 200px;
     }
 
+
     .mapa .frame {
-        margin-left: 2rem;
+        margin: 1rem 2rem;
         width: 80%;
-        height: 80%;
+
     }
 
     .productos {
