--- a/views/contacto.html
+++ b/views/contacto.html
@@ -40,17 +40,15 @@
     <p>Ingresa al mapa dando click <a
             href="https://www.google.com/maps/place/Academia+Oposiciones+y+Cursos+%7C+MasterD+Madrid/@40.4412286,-3.7000116,17z/data=!3m1!4b1!4m6!3m5!1s0xd4228f0d66f20dd:0xd2f315a5e7718fbe!8m2!3d40.4412286!4d-3.6974367!16s%2Fg%2F11xc65x3q?entry=ttu">AQUÍ</a>
     </p>
-    <div class="frame">
-        <iframe
+    <div>
+        <iframe class="frame"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.5379712842723!2d-3.700011624131069!3d40.44122857143564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4228f0d66f20dd%3A0xd2f315a5e7718fbe!2sAcademia%20Oposiciones%20y%20Cursos%20%7C%20MasterD%20Madrid!5e0!3m2!1ses!2ses!4v1705861032280!5m2!1ses!2ses"
-            width="100%" height="300" style="border: 0" allowfullscreen="" loading="lazy"
+            width="1460" height="500" style="border: 0" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 </section>
-</body>
 <!--Implementamos el pie de página-->
 <footer class="footer" id="contact">
-
     <div class="box-container">
         <div class="content">
             <a href="#"><img src="../imagenes/logo.png" alt="Logo" class="logo" width="220" height="280"></a>
