--- a/css/style.css
+++ b/css/style.css
@@ -536,11 +536,12 @@ th {
     margin: 10 auto;
 }
 
-.frame {
+.mapa .frame {
     margin: 2rem 2rem;
-    width: 100%;
-    height: 100%;
+    width: 90%;
 }
+
+
 
 /*media queries for web responsive*/
 @media screen and (max-width: 820px) {
@@ -668,7 +669,6 @@ th {
     .mapa .frame {
         margin: 1rem 2rem;
         width: 80%;
-
     }
 
     .productos {
