--- a/css/style.css
+++ b/css/style.css
@@ -265,6 +265,7 @@ nav a:hover {
     margin-top: 10px;
 }
 
+
 /*Inicia la Galería con GRID!*/
 
 .container {
@@ -336,6 +337,10 @@ nav a:hover {
 .main-contacto {
     width: 100%;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
 }
 
 .formulario .main-contacto form input {
@@ -344,16 +349,29 @@ nav a:hover {
 
 
 form {
-    margin: 40px 20px;
+    display: flex;
+    margin: 40px auto;
+    flex-direction: column;
+}
+
+.formularioF {
+    padding: 20px;
+    border: solid 2px black;
+    margin: 30px;
+    border-radius: 15px;
+    width: 800px;
 }
 
 /*damos tamaño a los cuadros*/
+
 form div,
 form legend {
     display: block;
-    font-size: 20px;
+    font-size: 16px;
     margin: 0 0 10px;
 }
+
+
 
 .input-padron {
     display: block;
@@ -377,9 +395,9 @@ form legend {
 }
 
 /*Agregamos color , tamaño y estilos al boton de enviar el formulario*/
-.enviar {
+#enviar {
     width: 40%;
-    margin: 30px 0;
+    margin: 30px 20px;
     padding: 15px 0;
     font-size: 18px;
     font-weight: bold;
@@ -391,7 +409,26 @@ form legend {
     cursor: pointer;
 }
 
-.enviar:hover {
+#enviar:hover {
+    background: darkorange;
+    transform: scale(1.2);
+}
+
+#borrar {
+    width: 40%;
+    margin: 30px 20px;
+    padding: 15px 0;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    background: orange;
+    border: none;
+    border-radius: 5px;
+    transition: 1s all;
+    cursor: pointer;
+}
+
+#borrar:hover {
     background: darkorange;
     transform: scale(1.2);
 }
@@ -704,7 +741,7 @@ th {
         width: auto;
     }
 
-    .enviar {
+    #enviar {
         width: 80%;
     }
 }
