--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -35,76 +35,142 @@
     <!--Iniciamos con el formulario-->
     <main class="main-contacto">
 
-      <form>
-        <label for="nombreapellido">Nombre y Apellido</label>
-        <input type="text" id="nombreapellido" class="input-padron" title="Máximo de 30 cracteres"
-          placeholder="Nombre y Apellido" pattern="[A-Za-z]{0,30}[\.]{*}" required>
+      <form id="form" name="form" method="post" action="procesar.php">
+        <fieldset class="formularioF">
+          <legend>Datos Personales</legend>
+          <label for="nombre">Nombre</label>
+          <input type="text" id="nombre" name="nombre" class="input-padron" placeholder="Escriba aquí su nombre">
 
-        <label for="correoelectronico">Correo Electronico</label>
-        <input type="email" id="correoelectronico" class="input-padron" title="Cumpla con un formato valido"
-          placeholder="email@dominio.com" pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" required>
+          <label for="apellido">Apellidos</label>
+          <input type="text" id="apellido" name="apellido" class="input-padron" placeholder="Escriba aquí su Apellido">
 
-        <label for="telefono">Telefono</label>
-        <input type="tel" id="telefono" class="input-padron" placeholder="XXX XX XX XX"
-          title="Introduce número de 10 dígitos" pattern="[\d]{9}" required>
+          <label for="telefono">Telefono de contacto</label>
+          <input type="tel" id="telefono" name="telefono" class="input-padron"
+            placeholder="Escribe aquí tu telefono de contacto">
 
-        <label for="mensaje">Mensaje</label>
-        <textarea id="mensaje" cols="70" rows="10" class="input-padron" required></textarea>
-
-        <fieldset>
-          <legend>¿Cómo le gustaría que lo contactemos?</legend>
-
-          <label for="radio-email"><input type="radio" name="contacto" value="email" id="radio-email">Email</label>
-
-          <label for="radio-telefono"><input type="radio" name="contacto" value="telefono"
-              id="radio-telefono">Teléfono</label>
-
-          <label for="radio-whatsapp"><input type="radio" name="contacto" value="whatsapp" id="radio-whatsapp"
-              checked>Whatsapp</label>
-
-        </fieldset>
-
-        <fieldset>
-          <legend>¿En cual horario prefiere ser atendido?</legend>
-          <select>
-            <option>Mañana</option>
-            <option>Tarde</option>
-            <option>Noche</option>
-          </select>
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" class="input-padron"
+            placeholder="Escribe aquí tu dirección de correo electronico">
         </fieldset>
 
 
-        <div class="checkbox"><input type="checkbox" checked>
-          ¿Le gutaría recibir novedades de la
-          Barbería ByAlex?
-          <div><input type="checkbox" required>
-            He leído y acepto la
-            <u>Politica de privacidad</u>
+
+
+
+
+
+        <fieldset class="formularioF">
+          <legend>Presupuesto</legend>
+          <div>
+            <label>Elije un producto</label>
+            <label for="categoria"></label>
+            <select id="categoria" name="categoria" required>
+              <option value="" disabled selected>Seleccione el tipo de corte</option>
+              <option value="clasico">Clásico - €20</option>
+              <option value="degrado">Degradado - €25</option>
+              <option value="skin">Skin Fade - €30</option>
+            </select>
+            <br><br>
           </div>
-        </div>
-        <!-- Agregamos el boton de enviar  -->
-        <input type="submit" value="Enviar formulario" class="enviar">
-        <table>
-          <thead>
-            <tr>
-              <th>Día</th>
-              <th>Horario</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Lunes</td>
-              <td>08h ~ 20h</td>
-            </tr>
-            <tr>
-              <td>Miércoles</td>
-              <td>08h ~ 20h</td>
-            </tr>
-            <tr>
-              <td>Viernes</td>
-              <td>08h ~ 20h</td>
-            </tr>
-          </tbody>
+
+
+          <label for="plazo">Plazo de entrega (días)</label>
+          <input type="number" id="plazo" name="plazo" min="1" required>
+          <br><br>
+
+
+          <label>Opciones extra:</label><br>
+          <div>
+            <input type="checkbox" id="barba" name="extras" value="barba">
+            <label for="barba">Arreglo de barba - €5</label>
+          </div>
+          <div>
+            <input type="checkbox" id="shampoo" name="extras" value="shampoo">
+            <label for="shampoo">Lavado con shampoo especial - €3</label>
+          </div>
+          <div>
+            <input type="checkbox" id="masaje" name="extras" value="masaje">
+            <label for="masaje">Masaje capilar - €7</label>
+          </div>
+          <br>
+
+
+          <label for="precioF">Presupuesto final</label>
+          <input type="text" id="precioF" name="precioF" readonly>
+
+
+
+        </fieldset>
+
+
+
+
+
+
+
+
+
+
+        <fieldset class="formularioF">
+          <legend>Aceptación condiciones y envio de presupuesto </legend>
+          <fieldset>
+            <legend>¿Cómo le gustaría que lo contactemos?</legend>
+
+            <label for="radio-email"><input type="radio" name="contacto" value="email" id="radio-email">Email</label>
+
+            <label for="radio-telefono"><input type="radio" name="contacto" value="telefono"
+                id="radio-telefono">Teléfono</label>
+
+            <label for="radio-whatsapp"><input type="radio" name="contacto" value="whatsapp" id="radio-whatsapp"
+                checked>Whatsapp</label>
+
+          </fieldset>
+
+          <fieldset>
+            <legend>¿En cual horario prefiere ser atendido?</legend>
+            <select>
+              <option>Mañana</option>
+              <option>Tarde</option>
+              <option>Noche</option>
+            </select>
+          </fieldset>
+
+
+          <div class="checkbox"><input type="checkbox">
+            ¿Le gutaría recibir novedades de la
+            Barbería ByAlex?
+            <div><input type="checkbox" id="privacidad" name="privacidad">
+              <label for="privacidad"> He leído y acepto la
+                <u>Politica de privacidad</u> </label>
+            </div>
+          </div>
+          <!-- Agregamos el boton de enviar  -->
+          <div>
+            <input type="submit" value="Enviar" id="enviar">
+            <input type="reset" value="Borrar" id="borrar">
+          </div>
+          <table>
+            <thead>
+              <tr>
+                <th>Día</th>
+                <th>Horario</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Lunes</td>
+                <td>08h ~ 20h</td>
+              </tr>
+              <tr>
+                <td>Miércoles</td>
+                <td>08h ~ 20h</td>
+              </tr>
+              <tr>
+                <td>Viernes</td>
+                <td>08h ~ 20h</td>
+              </tr>
+        </fieldset>
+        </tbody>
         </table>
       </form>
     </main>
@@ -137,7 +203,7 @@
         <h3>Contact Info</h3>
         <a href="#"> <i class="fas fa-phone"></i>+34 641909677</a>
         <a href="#">
-          <i class="fas fa-envelope"></i>ByAlex@gmail.com</a>
+          <i class="fas fa-envelope"></i>ByAlex@gmail.x</a>
         <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
           <i class="fa-regular fa-map"></i>Ubicación:
           Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
@@ -155,6 +221,7 @@
       © Created by <span>Mr. ByAlex Designer</span> |Todos los derechos reservados!
     </div>
   </footer>
+  <script src="../js/validar.js"></script>
 </body>
 
 </html>
