--- a/css/style.css
+++ b/css/style.css
@@ -671,7 +671,7 @@ th {
 
 .footer {
     grid-area: "my-footer";
-    width: 100%;
+    width: 1503px;
     height: auto;
     background: url(../imagenes/bg.jpg) no-repeat;
     padding: 20px 0;
@@ -695,7 +695,6 @@ th {
     margin-left: 20%;
     width: 60%;
     height: 60%;
-
 }
 
 .content a {
@@ -919,17 +918,18 @@ th {
     }
 
     .caja {
+        display: block;
+        width: 100%;
+        height: 100%;
         min-width: 50%;
         min-height: 50%;
-
     }
 
-    .caja spam img {
-        display: block;
+    .caja div img {
+        display: block;  
         cursor: pointer;
-        height: 90%;
-        width: 8%;
-        margin: .5rem;
+        height: 4rem;
+        width: 4rem;
     }
 
     .checkbtn {
@@ -1156,7 +1156,7 @@ th {
     .noticia {
         display: flex;
         flex-direction: column-reverse;
-        width: 95%;
+        width: 100%;
         height: 95%;
         margin-bottom: 20px;
         background-color: #fff;
@@ -1171,16 +1171,18 @@ th {
         align-items: center;
         width: 95%;
         height: 95%;
+        max-height: 400px;
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
     }
 
     .imagen-noticia img {
-        width: 300px;
-        height: 450px;
+        width: 95%;
+        height: 400px;
+        max-height: 450px;
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
-        padding-bottom: 10px;
+        padding-bottom: 2rem;
     }
 
     .content a {
@@ -1196,4 +1198,30 @@ th {
         display: none;
     }
 
+    .footer {
+        grid-area: "my-footer";
+        width: auto;
+        height: auto;
+        background: url(../imagenes/bg.jpg) no-repeat;
+        padding: 1rem 2rem;
+        background-size: cover;
+        background-position: center center;
+    }
+
+    .share {
+        margin: 3rem;
+    }
+
+    .footer .box-container .content {
+        display: flex;
+        flex-direction: column-reverse;
+        margin: 20%;
+        width: 25%;
+        height: 60%;
+    }
+
+    .footer .box-container .content a img {
+        width: 300px;
+        height: 300px;
+    }
 }
