--- a/views/contacto.html
+++ b/views/contacto.html
@@ -23,9 +23,9 @@
     <!-- Iniciamos el encabezado -->
     <header>
         <div class="caja">
-            <spam href="#"><img src="../imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería"
+            <div href="#"><img src="../imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería"
                     class="logo">
-            </spam>
+            </div>
             <nav>
                 <!-- Agregamos la barra de navegación -->
                 <input type="checkbox" id="check">
