--- a/views/productos.html
+++ b/views/productos.html
@@ -19,8 +19,8 @@
   <!-- Iniciamos el encabezado -->
   <header>
     <div class="caja">
-      <spam href="#"><img src="../imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería" class="logo">
-      </spam>
+      <div href="#"><img src="../imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería" class="logo">
+      </div>
       <nav> <!-- Agregamos la barra de navegación -->
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
