--- a/views/contacto.html
+++ b/views/contacto.html
@@ -13,6 +13,7 @@
     <!-- Fuente de texto -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <!-- Link iconos CSS-->
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0YElSWC2pBGqdmXT3AnEoKrOxEy3ekdQ&callback=iniciarMap">
