--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -19,25 +19,25 @@
 <!-- Iniciamos el encabezado -->
 <header>
   <div class="caja">
-    <div href="#"><img src="../imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería" class="logo">
-      </di>
-      <div class="titulo-h1">
-        <a>BARBERÍA BYALEX</a>
-      </div>
-      <nav> <!-- Agregamos la barra de navegación -->
-        <input type="checkbox" id="check">
-        <label for="check" class="checkbtn">
-          <i class="fa-solid fa-bars"></i>
-        </label>
-
-        <ul class="ul-header">
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="../views/productos.html">Productos</a></li>
-          <li><a id="selected" href="#">Contacto</a></li>
-          <li><a href="../views/contacto.html">Ubicación</a></li>
-        </ul>
-      </nav>
+    <div><img src="../imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería" class="logo">
     </div>
+    <div class="titulo-h1">
+      <a>BARBERÍA BYALEX</a>
+    </div>
+    <nav> <!-- Agregamos la barra de navegación -->
+      <input type="checkbox" id="check">
+      <label for="check" class="checkbtn">
+        <i class="fa-solid fa-bars"></i>
+      </label>
+
+      <ul class="ul-header">
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../views/productos.html">Productos</a></li>
+        <li><a id="selected" href="#">Contacto</a></li>
+        <li><a href="../views/contacto.html">Ubicación</a></li>
+      </ul>
+    </nav>
+  </div>
 </header>
 
 <div class="formulario">
