--- a/views/productos.html
+++ b/views/productos.html
@@ -20,7 +20,7 @@
   <!-- Iniciamos el encabezado -->
   <header>
     <div class="caja">
-      <div href="#"><img src="../imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería" class="logo">
+      <div><img src="../imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería" class="logo">
       </div>
       <div class="titulo-h1">
         <a>BARBERÍA BYALEX</a>
@@ -39,8 +39,8 @@
         </ul>
       </nav>
     </div>
-
   </header>
+  
   <!-- Agregamos los productos que ofrecemos-->
   <main>
     <h2 class="titulo-principal">Productos</h2>
