--- a/css/style.css
+++ b/css/style.css
@@ -49,14 +49,13 @@ header {
 
 .caja {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    align-content: flex-start;
-    width: 120%;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
     height: 100%;
     min-width: 50%;
     min-height: 50%;
-
+    margin: 1rem 0 0 1rem;
 }
 
 .titulo-h1 {
@@ -75,8 +74,9 @@ header {
 .caja div img {
     display: block;
     cursor: pointer;
-    height: 4rem;
-    width: 3rem;
+    height: 8rem;
+    width: 6rem;
+    margin: 0 0 0 1rem;
 }
 
 nav {
@@ -850,7 +850,8 @@ th {
     }
 
     .banner {
-        height: 90%;
+        width: 100%;
+        height: 100%;
     }
 
     html {
@@ -871,22 +872,15 @@ th {
         margin: 0;
         width: 100%;
         height: auto;
-        padding-top: 15%;
-    }
-
-    body {
-        display: block;
-        padding-top: 15%;
-        /* Ajustar según la nueva altura del header */
+        padding-top: 27%;
     }
 
     header {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         align-items: flex-start;
-        padding: 10px;
         width: 100%;
-        height: 20%;
+        height: 12%;
     }
 
     .logo {
@@ -898,7 +892,7 @@ th {
         flex-direction: column;
         align-items: flex-end;
         height: 100%;
-        top: -50px;
+        top: -50px;     
     }
 
     .ul-header li a {
@@ -910,8 +904,6 @@ th {
         border-radius: 5px;
         padding: .1rem;
         font-size: 100%;
-        margin: 1rem 0 0;
-
     }
 
 
@@ -927,14 +919,22 @@ th {
     .titulo-h1 {
         display: block;
         font-family: "Lobster", sans-serif !important;
-        text-align: center;
-        font-size: 2.5em;
-        clear: left;
+        text-align: right;
+        font-size: 2em;
+        clear: center;
         font-weight: bold;
     }
 
+    .caja {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        min-width: 50%;
+        min-height: 50%;
+    }
+
     .caja div {
-        width: 12%;
+        width: 29%;
         height: 100%;
     }
 
@@ -1230,5 +1230,12 @@ th {
     .footer .box-container .content a img {
         width: 300px;
         height: 300px;
+    }
+
+    .caja div img {
+        display: block;
+        cursor: pointer;
+        height: 4rem;
+        width: 3rem;
     }
 }
