--- a/css/style.css
+++ b/css/style.css
@@ -911,7 +911,7 @@ th {
         flex-direction: column;
         align-items: flex-end;
         height: 100%;
-        top: -30px;
+        top: -3DD0px;
     }
 
     .ul-header li a {
